--- a/index.html
+++ b/index.html
@@ -193,4 +193,5 @@
             `;
         }
     </script>
+     <p style="font-size: 1rem; text-align: center; margin-top: 20px;">Made by Rahul....</p>
 </body>
